# dino

./: meson.build  meson_options.txt
libdino/src/entity/: encryption.vala  settings.vala
libdino/src/plugin/: interfaces.vala  registry.vala
libdino/src/service/: conversation_manager.vala  message_storage.vala  muc_manager.vala  presence_manager.vala
main/data/add_conversation/: add_groupchat_dialog.ui
main/src/ui/: application.vala  conversation_details.vala
main/src/ui/add_conversation/: add_conference_dialog.vala  add_groupchat_dialog.vala
main/src/ui/chat_input/: encryption_button.vala
main/src/ui/conversation_content_view/: subscription_notification.vala
main/src/ui/occupant_menu/: view.vala
main/src/view_model/: conversation_details.vala  preferences_dialog.vala
main/src/windows/: conversation_details.vala
main/src/windows/preferences_window/: encryption_preferences_page.vala
plugins/: meson.build
plugins/omemo/src/ui/: encryption_preferences_entry.vala
plugins/x3dhpq/: meson.build
plugins/x3dhpq/src/: contact_details_provider.vala  database.vala  encryption_list_entry.vala  encryption_preferences_entry.vala  manager.vala  plugin.vala  register_plugin.vala  stream_module.vala  util.vala
plugins/x3dhpq/src/native/: wolfssl.vala  wolfssl_helper.c  wolfssl_helper.h
plugins/x3dhpq/src/protocol/: groupmsg.vala  groupsession.vala  groupshare.vala  membership_journal.vala  namespaces.vala  pairwise.vala  senderchain.vala
plugins/x3dhpq/tests/: common.vala  groupsession.vala  membership_journal.vala  pairwise.vala  testcase.vala
plugins/x3dhpq/vapi/: wolfssl.vapi
